# llmproxy

./: .gitignore  README.md  SKILL.md  config.test.yaml  config.yaml  llmproxy.service  logging_middleware.py  pyproject.toml  test.sh  test_api_key.sh
config/: config.test.yaml
examples/: hook_example.py
sample/: config.yaml  hook.py  llmproxy.service
samples/: blproxy.service  config.yaml  exrouter.service  hook.py  llama-server-embedding-tei-remapper.py  llama-server-rerank-tei-remapper.py  llama-server-tei-remapper.py
src/blproxy/: __init__.py  backend.py  config.py  hooks.py  main.py  proxy.py
src/exrouter/: __init__.py  backend.py  config.py  hooks.py  main.py  proxy.py  remapper.py
src/llmproxy/: __init__.py  app.py  backend.py  config.py  config.yaml  logging_middleware.py  main.py  script_loader.py
src/llmproxy/components/: __init__.py  audio.py  embeddings.py  openai.py  tei.py
src/llmproxy/config/: loader.py  models.py
src/llmproxy/endpoints/: chat.py
src/llmproxy/middleware/: api_key.py  global_lock.py  logging.py
src/llmproxy/routing/: backends.py
tests/: conftest.py  test_audio.py  test_backend.py  test_config.py  test_global_locks.py  test_hooks.py  test_lock_manager.py  test_lock_script.py  test_openai_models.py  test_proxy.py  test_pydantic_validation.py  test_remapper.py  test_tei_rerank.py
