[project]
name = "blproxy"
version = "1.0.0"
description = "Backend Locking Proxy - declarative backend proxy with global locking. Routes requests to backends and manages cross-backend resource locks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blproxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
