[project]
name = "exrouter"
version = "0.1.0"
description = "Exclusive Router - declarative backend proxy with global locking. Routes requests to backends and manages cross-backend resource locks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.5.0",
#    "pyannote-audio",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exrouter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

#[tool.uv.sources]
#pyannote-audio = { path = "../misc/pyannote", editable = true }
